# libuzmtp

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Kconfig  Makefile  README.md  libuzmtp.mk  west.yml
apps/demo/: CMakeLists.txt  prj.conf
apps/demo/src/: main.c
cmake/: build_linux.cmake  build_zephyr.cmake  cmocka.cmake  czmq.cmake  libzmq.cmake  supported_platforms.cmake
cmake/modules/: ExtractChecked.cmake  MakeAbsolute.cmake
doc/: Doxyfile
include/: uzmtp_platform_linux.h.in  uzmtp_platform_zephyr.h.in  uzmtp_types.h
include/uzmtp/: net.h  uzmtp.h  uzmtp_msg.h  uzmtp_platform_linux.h.in  uzmtp_platform_zephyr.h.in  uzmtp_types.h
mqx/: README.md
mqx/include/uzmtp/: main.h  net.h
programs/: Makefile  main.c  uzmtp-client  uzmtp-client.c
src/: CMakeLists.txt  dealer.c  main.c  msg.c  uzmtp.c  uzmtp.h  uzmtp_config_default.h  uzmtp_dealer.c  uzmtp_dealer.h  uzmtp_msg.c  uzmtp_msg.h  uzmtp_settings.h  uzmtp_types.h
src/os/: net.h
src/os/linux/: crypto.c  crypto.h  net.c  net.h
src/os/mqx/: net.c  net.h
src/port/: README.md
src/port/os/linux/: net.c  net.h
src/port/os/mqx/: net.c  net.h
src/port/tls/wolfssl/: tls.c  tls.h
test/integration/: CMakeLists.txt  echo-fixture.c  main.c
test/integration/fixture/: index.js  package-lock.json  package.json  run.cmake
test/unit/: CMakeLists.txt  dealer.c  helpers.c  helpers.h  main.c  msg.c  test_helpers.c  test_helpers.h  test_zmtp_dealer.c  test_zmtp_msg.c
tests/: .ycm_extra_conf.py  Makefile  app  index.js  package.json  router.cpp  tls_terminate.js
